--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "axios": "^0.27.2",
     "discord-rpc": "^4.0.1",
     "download": "^8.0.0",
+    "electron-acrylic-window": "^0.5.11",
     "etcher-cli": "^0.0.2",
     "express": "^4.18.1",
+    "glasstron": "^0.1.1",
     "path": "^0.12.7",
     "popups": "^1.1.3",
     "progress": "^2.0.3",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "wallpaper": "^6.1.1"
   },
   "devDependencies": {
     "electron": "^19.0.14"
