--- a/package.json
+++ b/package.json
@@ -1,23 +1,18 @@
 {
   "name": "avdanosimager",
-  "productName": "avdanosimager",
-  "description": "My Electron application description",
+  "productName": "AvdanOS Imager",
+  "description": "A Balena-Etcher alternative for the AvdanOS Operating System",
   "keywords": [],
-  "main": "./main.js",
+  "main": "./src/main.js",
   "version": "0.0.1",
-  "author": "Team AvdanOS",
+  "author": "AvdanOS",
   "scripts": {
     "start": "electron ."
   },
   "dependencies": {
-    "axios": "^0.27.2",
     "discord-rpc": "^4.0.1",
-    "download": "^8.0.0",
-    "etcher-cli": "^0.0.2",
     "express": "^4.18.1",
     "path": "^0.12.7",
-    "popups": "^1.1.3",
-    "progress": "^2.0.3",
     "request": "^2.88.2"
   },
   "devDependencies": {
