--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,5 +17,5 @@ steps:
 
 - script: |
     npm install
-    npm run start
+    xvfb-run --auto-servernum --server-args='-screen 0, 1600x900x24' npm run start
   displayName: 'npm install and build'
