Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,5 +17,10 @@ steps:
 
 - script: |
     npm install
-    xvfb-run --auto-servernum --server-args='-screen 0, 1600x900x24' npm run start
-  displayName: 'npm install and build'
+    npm run lint
+  displayName: 'NPM lint'
+
+- script: |
+    npm install
+    xvfb-run --auto-servernum --server-args='-screen 0, 1600x900x24' npm run test
+  displayName: 'NPM Install and Test'
