--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "version": "0.0.1",
   "author": "AvdanOS",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "lint:fix": "eslint --fix --ext .js,.jsx .",
+    "lint": "eslint ."
   },
   "dependencies": {
     "discord-rpc": "^4.0.1",
@@ -16,6 +18,8 @@
     "request": "^2.88.2"
   },
   "devDependencies": {
-    "electron": "^19.0.14"
+    "electron": "^19.0.14",
+    "eslint": "^8.33.0",
+    "eslint-config-google": "^0.14.0"
   }
 }
