Revert "Cleaned up the JavaScript files"
This reverts commit 1d3e696c0dd5dab533bbf654ac296f316d7a4965.

--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
   "version": "0.0.1",
   "author": "AvdanOS",
   "scripts": {
-    "start": "electron .",
-    "lint:fix": "eslint --fix --ext .js,.jsx .",
-    "lint": "eslint ."
+    "start": "electron ."
   },
   "dependencies": {
     "discord-rpc": "^4.0.1",
@@ -18,8 +16,6 @@
     "request": "^2.88.2"
   },
   "devDependencies": {
-    "electron": "^19.0.14",
-    "eslint": "^8.33.0",
-    "eslint-config-google": "^0.14.0"
+    "electron": "^19.0.14"
   }
 }
